delete ednpoint
